Use JsonWriter for writing Json. Support special doubles.